--- a/translations/kangyur/translations/040-003_toh52_indivisible_nature.xml
+++ b/translations/kangyur/translations/040-003_toh52_indivisible_nature.xml
@@ -29,7 +29,7 @@
                 <consultant role="advisor" ref="contributors.xml#person-230">Tom Tillemans</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.13.16 <date>2022</date>
+                <edition>v 1.13.19 <date>2022</date>
                 </edition>
             </editionStmt>
             <publicationStmt status="1">
@@ -62,7 +62,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-11T11:01:39.598Z" user="admin">11/07/2022 11:01:39</note>
+                <note type="lastUpdated" date-time="2023-02-02T17:14:08.62Z" user="admin">02/02/2023 17:14:08</note>
                 <note type="updated" update="text-version" value="v 1.12" date-time="2019-06-18T15:51:36.376Z" user="celso">v 1.12
                     2019</note>
                 <note type="updated" update="text-version" value="v 1.13" date-time="2019-06-21T14:19:39.547Z" user="celso">v 1.13
@@ -83,7 +83,7 @@
     <note type="updated" update="text-version" value="1.13.9" date-time="2021-02-01T12:34:45.143Z" user="line-tofte">Auto (update-contributors)</note>
     <note type="updated" update="text-version" value="1.13.10" date-time="2021-04-15T12:10:32.678Z" user="line-tofte">Auto (update-contributors)</note>
     <note type="updated" update="text-version" value="1.13.11" date-time="2021-04-22T23:49:33.779Z" user="celso">corrected minor typo</note>
-                <note type="updated" update="text-version" value="1.13.12" date-time="2021-04-28T14:40:53.329Z" user="celso">Corrected reference to Ch. source and added bibl entry</note>    <note type="updated" update="text-version" value="1.13.13" date-time="2022-02-16T14:12:01.599Z" user="celso">resolved new glossary locations due to terms adjacent to hyphens</note>    <note type="updated" update="text-version" value="1.13.14" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.13.15" date-time="2022-07-10T13:00:01.951Z" user="john">Harmonization of trailer and colophon</note>    <note type="updated" update="text-version" value="1.13.16" date-time="2022-07-11T11:01:35.819Z" user="john">Harmonization of trailer and colophon</note>
+                <note type="updated" update="text-version" value="1.13.12" date-time="2021-04-28T14:40:53.329Z" user="celso">Corrected reference to Ch. source and added bibl entry</note>    <note type="updated" update="text-version" value="1.13.13" date-time="2022-02-16T14:12:01.599Z" user="celso">resolved new glossary locations due to terms adjacent to hyphens</note>    <note type="updated" update="text-version" value="1.13.14" date-time="2022-06-27T10:06:48.1Z" user="admin">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.13.15" date-time="2022-07-10T13:00:01.951Z" user="john">Harmonization of trailer and colophon</note>    <note type="updated" update="text-version" value="1.13.16" date-time="2022-07-11T11:01:35.819Z" user="john">Harmonization of trailer and colophon</note>    <note type="updated" update="text-version" value="1.13.17" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>    <note type="updated" update="text-version" value="1.13.18" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>    <note type="updated" update="text-version" value="1.13.19" date-time="2023-02-02T17:14:05.76Z" user="konchog">Closed the parentheses in one numerical list.</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
@@ -1623,13 +1623,13 @@
                             <term xml:lang="Sa-Ltn">dhūtaguṇa</term>
                             <term type="definition">An optional set of practices that monastics can adopt in order to cultivate greater
                                 detachment. The list of practices varies in different sources. When thirteen practices are listed, they
-                                consist of 1) wearing patched robes made from discarded cloth rather than from cloth donated by laypeople;
-                                2) wearing only three robes; 3) going for alms; 4) not omitting any house while on the alms round, rather
-                                than begging only at those houses known to provide good food; 5) eating only what can be eaten in one
-                                sitting; 6) eating only food received in the alms bowl, rather than more elaborate meals presented to the
-                                Saṅgha; 7) refusing more food after indicating one has eaten enough; 8) dwelling in the forest; 9) dwelling
-                                at the root of a tree; 10) dwelling in the open air, using only a tent made from one’s robes as shelter; 11)
-                                dwelling in a charnel ground; 12) satisfaction with whatever dwelling one has; and 13) sleeping in a sitting
+                                consist of (1) wearing patched robes made from discarded cloth rather than from cloth donated by laypeople;
+                                (2) wearing only three robes; (3) going for alms; (4) not omitting any house while on the alms round, rather
+                                than begging only at those houses known to provide good food; (5) eating only what can be eaten in one
+                                sitting; (6) eating only food received in the alms bowl, rather than more elaborate meals presented to the
+                                Saṅgha; (7) refusing more food after indicating one has eaten enough; (8) dwelling in the forest; (9) dwelling
+                                at the root of a tree; (10) dwelling in the open air, using only a tent made from one’s robes as shelter; (11)
+                                dwelling in a charnel ground; (12) satisfaction with whatever dwelling one has; and (13) sleeping in a sitting
                                 position without ever lying down.</term>
                         </gloss>
                     </item>
