--- a/translations/kangyur/translations/072-010_toh310-the_sutra_on_impermanence.xml
+++ b/translations/kangyur/translations/072-010_toh310-the_sutra_on_impermanence.xml
@@ -6,10 +6,9 @@
       <titleStmt>
         <title type="mainTitle" xml:lang="en">The Sūtra on Impermanence</title>
         <title type="mainTitle" xml:lang="Sa-Ltn">Anityatāsūtra</title>
-        <title type="mainTitle" xml:lang="Bo-Ltn">mi rtag pa nyid kyi mdo/</title>
         <title type="mainTitle" xml:lang="bo">མི་རྟག་པ་ཉིད་ཀྱི་མདོ།</title>
-        <title type="otherTitle" xml:lang="zh"/>
-        <author ref="eft:team-68" role="translatorMain">Translated by Charles DiSimone and Jin
+        <title type="mainTitle" xml:lang="Bo-Ltn">mi rtag pa nyid kyi mdo/</title>
+        <author role="translatorMain" ref="eft:team-68">Translated by Charles DiSimone and Jin
           Kyoung Choi<lb/>under the patronage and supervision of 84000: Translating the Words of the
           Buddha</author>
         <author role="translatorEng" ref="eft:person-377">Charles DiSimone</author>
@@ -17,9 +16,11 @@
         <editor role="copyEditor" ref="eft:person-249">Konchog Norbu</editor>
         <editor role="projectEditor" ref="eft:person-250">Rory Lindsay</editor>
         <editor role="TEImarkupEditor" ref="eft:person-381">Martina Cotter</editor>
+        <editor role="finalReviewer" ref="eft:person-74">Ryan Damron</editor>
+        <editor role="reviser" ref="eft:person-378">Jin kyoung Choi</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 0.0.2 <date>2022</date>
+                <edition>v 0.0.3 <date>2022</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="2">
@@ -53,7 +54,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-02-06T08:38:41.277Z" user="admin">06/02/2023 08:38:41</note>
+        <note type="lastUpdated" date-time="2023-02-06T08:43:23.786Z" user="admin">06/02/2023 08:43:23</note>
         <note type="updated" update="translation-status" value="3" date-time="2021-10-19T09:19:42.637Z" user="line-tofte">3</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2021-10-19T09:19:42.637Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-19T09:23:16.27Z" user="line-tofte">Auto (update-contributors)</note>
@@ -97,8 +98,9 @@
         <note type="updated" update="text-version" value="0.0.21" date-time="2023-01-10T13:12:59.442Z" user="line-tofte">Auto
           (update-publication-status)</note>
         <note type="updated" update="text-version" value="0.0.22" date-time="2023-01-10T13:13:29.32Z" user="line-tofte">Auto (update-contributors)</note>
-          <note type="updated" update="translation-status" value="2" date-time="2023-02-06T08:38:35.587Z" user="line-tofte">2</note>
-          <note type="updated" update="text-version" value="0.0.2" date-time="2023-02-06T08:38:35.587Z" user="line-tofte">Auto (update-publication-status)</note>
+        <note type="updated" update="translation-status" value="2" date-time="2023-02-06T08:38:35.587Z" user="line-tofte">2</note>
+        <note type="updated" update="text-version" value="0.0.2" date-time="2023-02-06T08:38:35.587Z" user="line-tofte">Auto (update-publication-status)</note>
+          <note type="updated" update="text-version" value="0.0.3" date-time="2023-02-06T08:43:18.171Z" user="line-tofte">Auto (update-contributors)</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
