--- a/translations/kangyur/placeholders/101-008_toh953-the_incantation_of_vajrapani_the_yaksa_king.xml
+++ b/translations/kangyur/placeholders/101-008_toh953-the_incantation_of_vajrapani_the_yaksa_king.xml
@@ -11,10 +11,10 @@
                 <author role="translatorEng" ref="eft:person-61">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2022</date>
+                <edition>v 0.0.4 <date>2022</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt status="2.g">
                 <idno xml:id="UT22084-101-008"/>
                 <date/>
             </publicationStmt>
@@ -30,7 +30,7 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-04-25T13:23:29.267Z" user="admin">25/04/2022 13:23:29</note>    <note type="updated" update="translation-status" value="3" date-time="2022-04-13T12:57:36.464Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-04-13T12:57:36.464Z" user="line-tofte">0.0.1</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T12:58:00.359Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-04-25T13:23:21.663Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-04-25T13:23:21.663Z" user="line-tofte">Auto (update-publication-status)</note>
+                <note type="lastUpdated" date-time="2023-02-06T10:36:07.693Z" user="admin">06/02/2023 10:36:07</note>    <note type="updated" update="translation-status" value="3" date-time="2022-04-13T12:57:36.464Z" user="line-tofte">3</note>    <note type="updated" update="text-version" value="0.0.1" date-time="2022-04-13T12:57:36.464Z" user="line-tofte">0.0.1</note>    <note type="updated" update="text-version" value="0.0.2" date-time="2022-04-13T12:58:00.359Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.h" date-time="2022-04-25T13:23:21.663Z" user="line-tofte">2.h</note>    <note type="updated" update="text-version" value="0.0.3" date-time="2022-04-25T13:23:21.663Z" user="line-tofte">Auto (update-publication-status)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-02-06T10:36:02.08Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2023-02-06T10:36:02.08Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
