--- a/translations/kangyur/translations/064-002_toh232-the_great_cloud_1.xml
+++ b/translations/kangyur/translations/064-002_toh232-the_great_cloud_1.xml
@@ -25,7 +25,7 @@
         <sponsor ref="sponsors.xml#sponsor-3">anonymous</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.1.7 <date>2022</date>
+                <edition>v 1.1.10 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -59,7 +59,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-01-04T19:58:21.363Z" user="admin">04/01/2023 19:58:21</note>
+        <note type="lastUpdated" date-time="2023-02-06T13:35:03.754Z" user="admin">06/02/2023 13:35:03</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
           increment</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2020-09-02T08:37:55.927Z" user="line-tofte">2.h</note>
@@ -116,6 +116,9 @@
         <note type="updated" update="text-version" value="1.1.6" date-time="2022-12-05T14:48:22.425Z" user="konchog">Many small fixes throughout all
           sections, documented in an email. Another version increses will come once several other higher editorial questions are resolved.</note>
           <note type="updated" update="text-version" value="1.1.7" date-time="2023-01-04T19:58:18.331Z" user="john">Updated to account for change to titles of Toh 235.</note>
+          <note type="updated" update="text-version" value="1.1.8" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
+          <note type="updated" update="text-version" value="1.1.9" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
+          <note type="updated" update="text-version" value="1.1.10" date-time="2023-02-06T13:35:00.819Z" user="john">Edited intro to modify mentions of "docetic buddhology" in first paragraph, added note and biblio entries.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -132,7 +135,7 @@
           Cloud Essence, who are periodically joined by various additional interlocutors from the vast audience of human and divine beings who have
           assembled to hear the Buddha’s teaching. The topics of their conversation are diverse and wide-ranging, but a central theme is the vast
           conduct of bodhisattvas, which is illustrated through the enumeration of the various meditative states and liberative techniques that
-          bodhisattvas must master in order to minister to all sentient beings. This is followed by a conversation with a brahmin named Kauṇḍinya
+          bodhisattvas must master in order to minister to all sentient beings. This is followed by a conversation with the brahmin Kauṇḍinya
           concerning the Buddha’s cousin Devadatta, who is revealed to be a bodhisattva displaying the highest level of skillful means. Kauṇḍinya then
           inquires about the possibility of obtaining a relic from the Buddha, and another member of the audience responds with an explanation of how
           truly rare it is for a buddha relic to appear within the world. Finally, the discourse ends with the Buddha delivering a series of detailed
@@ -155,18 +158,23 @@
         <div type="section" xml:id="UT22084-064-002-introduction-1">
           <milestone unit="chunk" xml:id="UT22084-064-002-6"/>
           <p tid="912">
-                        <title xml:lang="en">The Great Cloud</title> is an important source of ideas relating to docetic buddhology, the doctrine that
-            living buddhas are not flesh-and-blood human beings but rather phantasms magically created to guide and serve as examples to sentient
-            beings. One of the main themes of the discourse is the idea that the Tathāgata is permanent and does not really pass into parinirvāṇa but
-            strategically displays an illusory body that seems to strive for awakening and eventually pass into parinirvāṇa to exemplify religious
-            attainment. This docetic view is supported by the claim that orthodox Buddhist doctrines of impermanence and selflessness were merely
+                        <title xml:lang="en">The Great Cloud</title> is an important Mahāyāna sūtra, known particularly 
+            as one source of the idea that a tathāgata is permanent and does not really pass into parinirvāṇa, but
+            strategically displays an illusory body. To exemplify religious attainment for sentient beings, this emanated body seems to take birth, strive for awakening, and 
+            eventually pass into parinirvāṇa.<note place="end" xml:id="UT22084-064-002-950">Such views comprise one element of Buddha-nature theory associated with the Buddha’s “third turning
+            of the wheel of Dharma” (see below), but also stem from the theory of the emanation body (<foreign xml:lang="Sa-Ltn">nirmāṇakāya</foreign>, 
+              <foreign xml:lang="Bo-Ltn">sprul pa’i sku</foreign>) that may have first developed in non-Mahāyāna schools. They have been compared by  
+              scholars in the modern era to similar views about Jesus Christ in docetism, a second century belief rejected as heretical by
+            the early Church councils. On “docetic Buddhism” see Anesaki (1911), Seyfort-Ruegg (2008) pp. 31–34, and Radich (2015).</note> In this sūtra 
+            this view is not merely implied or stated without comment, but is set out along with the claim that orthodox Buddhist doctrines of impermanence and selflessness are merely
             provisional teachings imparted by the Buddha for the sake of śrāvakas and pratyekabuddhas who were too trepidatious and spiritually
             immature to accept the realities of permanence and true selfhood. </p>
           <milestone unit="chunk" xml:id="UT22084-064-002-1677"/>
-          <p tid="913">These controversial themes are shared with the famous <title xml:lang="Sa-Ltn">Mahāparinirvāṇa-mahāsūtra</title>, which exerted
+          <p tid="913">These themes are shared with the famous <title xml:lang="Sa-Ltn">Mahāparinirvāṇa-mahāsūtra</title>, which exerted
             a tremendous influence on doctrinal developments in Chinese and East Asian Buddhism in the fifth and sixth centuries. Indeed, Chinese
             bibliographers classified <title xml:lang="en">The Great Cloud</title> with a handful of other sūtras that they considered to be related
-            to the <title xml:lang="Sa-Ltn">Mahāparinirvāṇa-mahāsūtra</title>, arguably the earliest extant work on buddha nature (<foreign xml:lang="Sa-Ltn" type="term">tathāgata­garbha</foreign>).<note place="end" xml:id="UT22084-064-002-7"> See Radich 2015, p. 19ff.</note>
+            to the <title xml:lang="Sa-Ltn">Mahāparinirvāṇa-mahāsūtra</title>, arguably the earliest extant work on buddha nature 
+            (<foreign xml:lang="Sa-Ltn" type="term">tathāgata­garbha</foreign>).<note place="end" xml:id="UT22084-064-002-7"> See Radich 2015, p. 19ff.</note>
             Several Tibetan authors, too, beginning in the fourteenth century with Dolpopa Sherab Gyaltsen, listed the sūtra among those related to
             buddha nature or those of definitive meaning.<note place="end" xml:id="UT22084-064-002-1675"> See Brunnhölzl 2014, p. 4ff; however, in his
               paragraph on the sūtra on p. 46 he does not note the presence in it of the themes just mentioned.</note>
@@ -5673,6 +5681,8 @@
             jo), folios 294.b–310.a.</bibl>
           <bibl xml:id="UT22084-064-002-935">Phangthangma (<title xml:lang="Bo-Ltn">dkar chag ’phang thang ma</title>). Beijing: mi rigs dpe skrun
             khang, 2003.</bibl>
+          <bibl xml:id="UT22084-064-002-1680">Anesaki, Masaharu. “Docetism (Buddhist),” in Hastings, J. (ed.) <title xml:lang="en">Encyclopaedia of Religion and Ethics</title>, pp. 835–840. 
+            (Available on <ref target="https://ia600701.us.archive.org/14/items/EncyclopaediaReligionsEthics.hastings.13vols.1908-1914.1926/04.EncycReligEthics.v4.Con-Dram.HastingsJ.SelbieJA.GrayLA.NY.ChScrib.1908.1914..pdf">Internet Archive</ref>). Edinburgh: Clark, 1911.</bibl>
           <bibl xml:id="UT22084-064-002-1676">Brunnhölzl, Karl. <title xml:lang="en">When the Clouds Part: The Uttaratantra and its Meditative
               Tradition as a Bridge Between Sūtra and Tantra</title>. Hamburg: Hamburg University Press, 2015.</bibl>
           <bibl xml:id="UT22084-064-002-936">Forte, Antonino. <title xml:lang="en">Political Propaganda and Ideology in China at the End of the
@@ -5680,6 +5690,9 @@
               Translation</title>. Naples: Instituto Universitario Orientale, Seminario di Studi Asiatici, 1976.</bibl>
           <bibl xml:id="UT22084-064-002-937">Radich, Michael (2015). <title xml:lang="en">The Mahāparinirvāṇa-mahāsūtra and the Emergence of
               Tathāgatagarbha Doctrine</title>. Hamburg Buddhist Studies 5. Hamburg: Hamburg University Press, 2015.</bibl>
+          <bibl xml:id="UT22084-064-002-1681">Seyfort-Ruegg, David. “Docetism in Mahāyāna Sūtras,” in <title xml:lang="en">The symbiosis of Buddhism with Brahmanism/Hinduism 
+            in South Asia and of Buddhism with “local cults” in Tibet and the Himalayan region</title>, pp. 31–34. 
+            Vienna: Austrian Academy of Sciences Press, 2008.</bibl>
           <bibl xml:id="UT22084-064-002-938">———(2017). “Problems of Attribution, Style, and Dating Relating to the ‘Great Cloud <foreign xml:lang="Sa-Ltn" type="term">Sutra</foreign>s’ in the Chinese Buddhist Canon (T 387, T 388/S. 6916).” In <title xml:lang="en">Buddhist
               Transformations and Interactions: Essays in Honor of Antonino Forte</title>, edited by Victor H. Mair, 235–89. Amherst, NY: Cambria
             Press, 2017.</bibl>
