--- a/translations/kangyur/translations/064-002_toh232-the_great_cloud_1.xml
+++ b/translations/kangyur/translations/064-002_toh232-the_great_cloud_1.xml
@@ -25,7 +25,7 @@
         <sponsor ref="sponsors.xml#sponsor-3">anonymous</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.1.10 <date>2023</date>
+                <edition>v 1.1.11 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1">
@@ -59,7 +59,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-02-06T13:35:03.754Z" user="admin">06/02/2023 13:35:03</note>
+        <note type="lastUpdated" date-time="2023-02-06T13:52:15.557Z" user="admin">06/02/2023 13:52:15</note>
         <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version
           increment</note>
         <note type="updated" update="translation-status" value="2.h" date-time="2020-09-02T08:37:55.927Z" user="line-tofte">2.h</note>
@@ -119,6 +119,7 @@
           <note type="updated" update="text-version" value="1.1.8" date-time="2023-01-16T16:58:52.361Z" user="celso">Auto (script-increment-version-published)</note>
           <note type="updated" update="text-version" value="1.1.9" date-time="2023-01-18T16:58:06.914Z" user="celso">Auto (remove-tid-from-back-list-items)</note>
           <note type="updated" update="text-version" value="1.1.10" date-time="2023-02-06T13:35:00.819Z" user="john">Edited intro to modify mentions of "docetic buddhology" in first paragraph, added note and biblio entries.</note>
+          <note type="updated" update="text-version" value="1.1.11" date-time="2023-02-06T13:52:12.626Z" user="john">One further small edit.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -166,7 +167,7 @@
               <foreign xml:lang="Bo-Ltn">sprul pa’i sku</foreign>) that may have first developed in non-Mahāyāna schools. They have been compared by  
               scholars in the modern era to similar views about Jesus Christ in docetism, a second century belief rejected as heretical by
             the early Church councils. On “docetic Buddhism” see Anesaki (1911), Seyfort-Ruegg (2008) pp. 31–34, and Radich (2015).</note> In this sūtra 
-            this view is not merely implied or stated without comment, but is set out along with the claim that orthodox Buddhist doctrines of impermanence and selflessness are merely
+            this view is not merely implied or stated without comment, as it is in many sūtras, but is set out along with the claim that orthodox Buddhist doctrines of impermanence and selflessness are merely
             provisional teachings imparted by the Buddha for the sake of śrāvakas and pratyekabuddhas who were too trepidatious and spiritually
             immature to accept the realities of permanence and true selfhood. </p>
           <milestone unit="chunk" xml:id="UT22084-064-002-1677"/>
