--- a/translations/kangyur/placeholders/042-001_toh60-the_meeting_of_father_and_son.xml
+++ b/translations/kangyur/placeholders/042-001_toh60-the_meeting_of_father_and_son.xml
@@ -14,11 +14,11 @@
                 <sponsor ref="eft:sponsor-1">Kris Yao</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2019</date>
+                <edition>v 0.0.4 <date>2019</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="3">
+            <publicationStmt status="2.h">
                 <idno xml:id="UT22084-042-001"/>
                 <date/>
             </publicationStmt>
@@ -34,9 +34,11 @@
                 </bibl>
             </sourceDesc>
             <notesStmt>
-                <note type="lastUpdated" date-time="2022-06-14T07:57:35.803Z" user="admin">14/06/2022 07:57:35</note>
+                <note type="lastUpdated" date-time="2023-02-06T14:33:11.596Z" user="admin">06/02/2023 14:33:11</note>
                 <note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
                 <note type="updated" update="text-version" value="0.0.2" date-time="2021-12-21T16:15:05.141Z" user="cabie-sim">Auto (update-sponsorship)</note>
+                <note type="updated" update="translation-status" value="2.h" date-time="2023-02-06T14:33:05.956Z" user="line-tofte">2.h</note>
+                <note type="updated" update="text-version" value="0.0.4" date-time="2023-02-06T14:33:05.956Z" user="line-tofte">Auto (update-publication-status)</note>
             </notesStmt>
         </fileDesc>
     </teiHeader>
