--- a/translations/kangyur/translations/072-010_toh310-the_sutra_on_impermanence.xml
+++ b/translations/kangyur/translations/072-010_toh310-the_sutra_on_impermanence.xml
@@ -20,10 +20,10 @@
         <editor role="reviser" ref="eft:person-378">Jin kyoung Choi</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 0.0.4 <date>2022</date>
+                <edition>v 1.0.0 <date>2023</date>
                 </edition>
             </editionStmt>
-      <publicationStmt status="2">
+      <publicationStmt status="1.a">
                 <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
@@ -40,7 +40,7 @@
                 <idno xml:id="UT22084-072-010"/>
                 <note>An early mistake in the assigning of UT numbers within the 84000 project means that
           these ids diverge slightly from the standard logic.</note>
-                <date>2023-01-12</date>
+                <date>2023-02-08</date>
             </publicationStmt>
       <sourceDesc>
         <bibl key="toh310" type="text">
@@ -54,7 +54,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-02-07T18:24:54.452Z" user="admin">07/02/2023 18:24:54</note>
+        <note type="lastUpdated" date-time="2023-02-08T16:18:23.781Z" user="admin">08/02/2023 16:18:23</note>
         <note type="updated" update="translation-status" value="3" date-time="2021-10-19T09:19:42.637Z" user="line-tofte">3</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2021-10-19T09:19:42.637Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-19T09:23:16.27Z" user="line-tofte">Auto (update-contributors)</note>
@@ -102,6 +102,8 @@
         <note type="updated" update="text-version" value="0.0.2" date-time="2023-02-06T08:38:35.587Z" user="line-tofte">Auto (update-publication-status)</note>
         <note type="updated" update="text-version" value="0.0.3" date-time="2023-02-06T08:43:18.171Z" user="line-tofte">Auto (update-contributors)</note>
           <note type="updated" update="text-version" value="0.0.4" date-time="2023-02-07T18:24:48.754Z" user="john">Auto (update-titles)</note>
+          <note type="updated" update="translation-status" value="1.a" date-time="2023-02-08T16:18:18.141Z" user="martina-cotter">1.a</note>
+          <note type="updated" update="text-version" value="1.0.0" date-time="2023-02-08T16:18:18.141Z" user="martina-cotter">First published version</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -345,7 +347,7 @@
           <milestone unit="chunk" xml:id="UT22084-072-010-28"/>
           <p tid="17">There are also a number of parallel passages to be found within surviving
             Sanskrit Buddhist works beyond the verses shared with the <title xml:lang="Sa-Ltn">Udānavarga</title>, which themselves appear across a spectrum of texts.<note place="end" xml:id="UT22084-072-010-29"> See, for example, (the Mūlasarvāstivāda)
-              <title xml:lang="Sa-Ltn">Mahā­parinirvāṇa­sūtra</title> (MPS 48.14) and (NidSa
+              <title xml:lang="Sa-Ltn">Mahā­parinirvāṇa­sūtra</title> (MPS 48.14) and NidSa
               7.3,4.</note> That the present sūtra is not found in Pali, but that its modular
             pieces may be found in Pali works, may be telling. This, taken with the fact that the
             Chinese translation is rather late and is in the Collected Sūtras section of the Taishō,
@@ -477,7 +479,7 @@
             the third dhyāna, that is, those of limited splendor, those of immeasurable splendor,
             and those of complete splendor; those who have obtained the fourth dhyāna, that is,
             those who are unclouded, those with abundant merit, those with great fruition, and those
-            who have a nature that is free from perception; and those gods<note place="end" xml:id="UT22084-072-010-67"> Tibetan omits.</note> [of the Pure Abodes (Śuddhāvāsa)],
+            who have a nature that is free from perception; and those gods<note place="end" xml:id="UT22084-072-010-67"> Tibetan omits.</note> [of the Pure Abodes (<foreign xml:lang="Sa-Ltn">śuddhāvāsa</foreign>)],
             that is, those who are relatively not great, those without trouble, those of excellent
             appearance, those of excellent observation,<note place="end" xml:id="UT22084-072-010-68"> The Tibetan switches the order of <foreign xml:lang="Sa-Ltn" type="term">sudṛśa</foreign> and <foreign xml:lang="Sa-Ltn" type="term">sudarśana</foreign>,
               reading <foreign xml:lang="Bo-Ltn" type="quote">shin tu mthong ba dang | gya nom snang
@@ -1729,7 +1731,7 @@
               <term>all that draw breath</term>
               <term xml:lang="Bo-Ltn" status="verified">srog chags thams cad </term>
               <term xml:lang="bo">སྲོག་ཆགས་ཐམས་ཅད།</term>
-              <term xml:lang="Sa-Ltn" status="verified"> sarvaprāṇin (sarveṣāṃ prāṇinām) </term>
+              <term xml:lang="Sa-Ltn" status="verified">sarveṣāṃ prāṇinām </term>
               <term type="definition">All living beings.</term>
             </gloss>
                     </item>
@@ -1793,7 +1795,7 @@
               <term>the gods of Yāma Heaven</term>
               <term xml:lang="Bo-Ltn" status="verified">’thab bral gyi lha </term>
               <term xml:lang="bo">འཐབ་བྲལ་གྱི་ལྷ།</term>
-            <term xml:lang="Sa-Ltn" status="verified">yāmā devās</term>
+            <term xml:lang="Sa-Ltn" status="verified">yāmā devāḥ</term>
               <term type="definition">The gods of the Yāma Heaven, the third of the six heavens of
                 the desire realm. The name is the same for both the location and the inhabitant
                 deities.</term>
@@ -1804,7 +1806,7 @@
               <term>the gods of Tuṣita Heaven</term>
               <term xml:lang="Bo-Ltn" status="verified">dga’ ldan gyi lha </term>
               <term xml:lang="bo">དགའ་ལྡན་གྱི་ལྷ།</term>
-            <term xml:lang="Sa-Ltn" status="verified">tuṣitā devā</term>
+            <term xml:lang="Sa-Ltn" status="verified">tuṣitā devāḥ</term>
               <term type="definition">The gods of Tuṣita Heaven, the Joyous Heaven, the fourth of
                 the six heavens of the desire realm. The name is the same for both the location and
                 the inhabitant deities. Tuṣita is of note for being the abode of Maitreya until his
@@ -1829,7 +1831,7 @@
               <term>the gods of the Heaven of Control of Enjoyments Created by Others</term>
               <term xml:lang="Bo-Ltn" status="verified">gzhan ’phrul dbang byed kyi lha </term>
               <term xml:lang="bo">གཞན་འཕྲུལ་དབང་བྱེད་ཀྱི་ལྷ།</term>
-            <term xml:lang="Sa-Ltn" status="verified"> paranirmitavaśavartino devās</term>
+            <term xml:lang="Sa-Ltn" status="verified"> paranirmitavaśavartino devāḥ</term>
               <term type="definition">The Paranirmitavaśavartin gods, those who control enjoyments
                 created by others, the sixth and highest of the six heavens of the desire realm. The
                 name is the same for both the location and the inhabitant deities. These gods enjoy
@@ -2043,7 +2045,7 @@
               <term xml:lang="bo">མི་ཆེ་བ།</term>
               <term xml:lang="Sa-Ltn" status="verified"> abṛha</term>
               <term type="definition">The first of five classes of gods dwelling in the Pure Abodes
-                (śuddhāvāsa).</term>
+                (<foreign xml:lang="Sa-Ltn">śuddhāvāsa</foreign>).</term>
             </gloss>
                     </item>
           <item>
@@ -2053,7 +2055,7 @@
               <term xml:lang="bo">མི་གདུང་བ།</term>
               <term xml:lang="Sa-Ltn" status="verified"> atapa</term>
               <term type="definition">The second of the five classes of gods dwelling in the Pure
-                Abodes (śuddhāvāsa). </term>
+                Abodes (<foreign xml:lang="Sa-Ltn">śuddhāvāsa</foreign>). </term>
             </gloss>
                     </item>
           <item>
@@ -2063,7 +2065,7 @@
               <term xml:lang="bo">ཤིན་ཏུ་མཐོང་བ།</term>
               <term xml:lang="Sa-Ltn" status="verified"> sudarśana</term>
               <term type="definition">The fourth of the five classes of gods dwelling in the Pure
-                Abodes (śuddhāvāsa). See <ptr target="#UT22084-072-010-68"/>. </term>
+                Abodes (<foreign xml:lang="Sa-Ltn">śuddhāvāsa</foreign>). See <ptr target="#UT22084-072-010-68"/>. </term>
           </gloss>
                     </item>
           <item>
@@ -2073,7 +2075,7 @@
               <term xml:lang="bo">གྱ་ནོམ་སྣང་།</term>
               <term xml:lang="Sa-Ltn" status="verified"> sudṛśa</term>
               <term type="definition">The third of the five classes of gods dwelling in the Pure
-                Abodes (śuddhāvāsa).</term>
+                Abodes (<foreign xml:lang="Sa-Ltn">śuddhāvāsa</foreign>).</term>
             </gloss>
                     </item>
           <item>
@@ -2083,7 +2085,7 @@
               <term xml:lang="bo">འོག་མིན།</term>
               <term xml:lang="Sa-Ltn" status="verified"> akaniṣṭha</term>
               <term type="definition">The highest, fifth, and final class of gods dwelling in the
-                Pure Abodes (śuddhāvāsa).</term>
+                Pure Abodes (<foreign xml:lang="Sa-Ltn">śuddhāvāsa</foreign>).</term>
             </gloss>
                     </item>
           <item>
@@ -2168,7 +2170,7 @@
               <term xml:lang="Bo-Ltn" status="verified">bse ru lta bu </term>
               <term xml:lang="bo">བསེ་རུ་ལྟ་བུ།</term>
               <term xml:lang="Sa-Ltn" status="verified"> khaḍgaviṣāṇakalpa</term>
-            <term type="definition">One of the two classes of pratyekabuddha, used for those living a solitary life. The other type is the vargacārin, “those who live in crowds.”</term>
+            <term type="definition">One of the two classes of pratyekabuddha, used for those living a solitary life. The other type is the <foreign xml:lang="Sa-Ltn">vargacārin</foreign>, “those who live in crowds.”</term>
             </gloss>
                     </item>
           <item>
@@ -2302,7 +2304,7 @@
               <term>Anāthapiṇḍada’s park</term>
               <term xml:lang="Bo-Ltn" status="verified">mgon med zas sbyin gyi kun dga’ ra ba </term>
               <term xml:lang="bo">མགོན་མེད་ཟས་སྦྱིན་གྱི་ཀུན་དགའ་ར་བ།</term>
-            <term xml:lang="Sa-Ltn" status="verified"> anāthapiṇḍadasyārāmaḥ</term>
+            <term xml:lang="Sa-Ltn" status="verified">anāthapiṇḍadasya ārāmaḥ</term>
               <term type="definition">A park donated for the use of the saṅgha by the wealthy
                 householder Anāthapiṇḍada.</term>
             </gloss>
