--- a/translations/kangyur/translations/072-010_toh310-the_sutra_on_impermanence.xml
+++ b/translations/kangyur/translations/072-010_toh310-the_sutra_on_impermanence.xml
@@ -20,7 +20,7 @@
         <editor role="reviser" ref="eft:person-378">Jin kyoung Choi</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt status="1.a">
@@ -54,7 +54,7 @@
         </bibl>
       </sourceDesc>
       <notesStmt>
-        <note type="lastUpdated" date-time="2023-02-08T16:18:23.781Z" user="admin">08/02/2023 16:18:23</note>
+        <note type="lastUpdated" date-time="2023-02-08T16:28:12.037Z" user="admin">08/02/2023 16:28:12</note>
         <note type="updated" update="translation-status" value="3" date-time="2021-10-19T09:19:42.637Z" user="line-tofte">3</note>
         <note type="updated" update="text-version" value="0.0.1" date-time="2021-10-19T09:19:42.637Z" user="line-tofte">0.0.1</note>
         <note type="updated" update="text-version" value="0.0.2" date-time="2021-10-19T09:23:16.27Z" user="line-tofte">Auto (update-contributors)</note>
@@ -104,6 +104,7 @@
           <note type="updated" update="text-version" value="0.0.4" date-time="2023-02-07T18:24:48.754Z" user="john">Auto (update-titles)</note>
           <note type="updated" update="translation-status" value="1.a" date-time="2023-02-08T16:18:18.141Z" user="martina-cotter">1.a</note>
           <note type="updated" update="text-version" value="1.0.0" date-time="2023-02-08T16:18:18.141Z" user="martina-cotter">First published version</note>
+          <note type="updated" update="text-version" value="1.0.1" date-time="2023-02-08T16:28:09.199Z" user="martina-cotter">updated glossary entry.</note>
       </notesStmt>
     </fileDesc>
   </teiHeader>
@@ -2179,6 +2180,7 @@
               <term xml:lang="Bo-Ltn" status="verified">tshogs na spyod pa </term>
               <term xml:lang="bo">ཚོགས་ན་སྤྱོད་པ།</term>
               <term xml:lang="Sa-Ltn" status="verified"> vargacārin</term>
+            <term type="alternative">who live in crowds</term>
               <term type="definition">One of the two classes of pratyekabuddha, the opposite class
                 being the solitary <foreign xml:lang="Sa-Ltn" type="term">khaḍgavisāṇakalpa</foreign>. (not in Skt. witnesses)</term>
             </gloss>
